# SimpleSerialInterface

./: .gitignore  CMakeLists.txt  README.md  simple_serial.pc.in
examples/: reader_serial_test.cpp  writer_serial_test.cpp
include/simple_serial/: blocking_reader.h  simple_serial.h
src/: simple_serial.cpp
